@@ -5,6 +5,8 @@ and this project **does not adhere to [Semantic Versioning](http://semver.org/sp
 
 ### Added
 
+* IS_EVOLIX_GROUP: new check to verify that all Evolix users are in "evolix" group
+
 ### Changed
 
 * IS_SYSLOGCONF: better detection
